# Fyndora

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  asd  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.cursor/rules/: django.mdc
apps/accounts/: admin.py  constants.py  models.py  urls.py  views.py
apps/attachments/: admin.py  constants.py  models.py  selectors.py  services.py  urls.py  utils.py  views.py
apps/auditlog/: AUDIT_ACTION_TYPES.md  admin.py  apps.py  audit_logging.py  auth_signals.py  business_logger.py  config.py  constants.py  hybrid_logging.py  models.py  selectors.py  services.py  signal_handlers.py  tasks.py  urls.py  utils.py  views.py
apps/core/: constants.py  decorators.py  exceptions.py  forms.py  managers.py  models.py  permissions.py  querysets.py  report_urls.py  roles.py  selectors.py  urls.py  utils.py  views.py
apps/currencies/: constants.py  forms.py  models.py  selectors.py  services.py
apps/emails/: EMAIL_SETUP_GUIDE.md  adapters.py  services.py  tasks.py
apps/entries/: admin.py  apps.py  constants.py  exceptions.py  forms.py  models.py  permissions.py  selectors.py  services.py  signals.py  stats.py  urls.py  utils.py  validators.py  views.py
apps/invitations/: apps.py  forms.py  models.py  selectors.py  services.py  signals.py  urls.py  utils.py  views.py
apps/organizations/: __init__.py  admin.py  constants.py  exceptions.py  forms.py  models.py  permissions.py  selectors.py  services.py  urls.py  utils.py  views.py
apps/playgrounds/: apps.py
apps/remittance/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  models.py  permissions.py  selectors.py  services.py  signals.py  urls.py  utils.py  views.py
apps/reports/: permissions.py  selectors.py  services.py  urls.py  views.py
apps/teams/: admin.py  apps.py  constants.py  exceptions.py  forms.py  models.py  permissions.py  selectors.py  services.py  urls.py  utils.py  views.py
apps/workspaces/: admin.py  apps.py  constants.py  custom_urls.py  exceptions.py  forms.py  models.py  permissions.py  selectors.py  services.py  signals.py  urls.py  utils.py  views.py
config/: celery.py  context_processors.py  settings.py  settings_test.py  urls.py
scripts/: docker-dev.sh  docker-prod.sh
static/css/: input.css  output.css
templates/: base.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  signup.html  (+4 more)
tests/: conftest.py
(+508 files in other folders)
